# zoran_v11_release

./: .github__workflows__advanced_tests.yml  .github__workflows__ci.yml  .github__workflows__publish.yml  .github_workflow_hsm_rekor_krl.yml  .github_workflow_redteam_gate.yml  .github_workflows_poc_deploy.yml  .github_workflows_poc_injector.yml  01_basic_compliance_audit.py  02_building_a_custom_pipeline.py  03_securing_a_model_with_pqc.py  04_federated_voting_primer.py  ADOPTION_MATURITY_MODEL.md  AI_Act_Compliance_with_GlyphNet.md  AI_GUIDE.md  ATTENTION_LIRE_IMMEDIATEMENT.md  AUDIT_REDTEAM_WOLVES_REPORT.md  AUDIT_VERITAS_README.md  BACKLOG_REMAINING.md  Biospheric_Governance.md  CHANGELOG.md  CHECK_COMPLETION.md  CITATION.cff  CODE_OF_CONDUCT.md  COLLAB_PLAN_ACADEMIA.md  CONSTITUTION_ZORAN_OMEGA.md  CONTINUITY_PLAN.md  CONTRIBUTING.md  COPY_THIS.md  DELTA_ANALYSIS_GLOBAL.md  DESCRIPTION.txt  DO_NOT_IGNORE_THIS_README.md  Dockerfile  EPILOGUE.md  EthicChain_Dynamic.md  FAST_INSTALL.md  GLOSSARY.md  GlyphNet_CoreGlyphSet.md  GlyphNet_Twin_Protocol.md  HEALTHCARE_USE_CASE_ONE_PAGER.md  HOW_TO_START.md  (+587 more)
