[project]
name = "zoran-glyphnet-batches"
version = "0.11.0"
description = "ZORAN • GlyphNet V11 — code batché à plat (<=100 fichiers par dossier)"
authors = [{name = "Frédéric Tabary"}]
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
