[project]
name = "zoran-glyphnet-batches"
version = "1.4.0"
description = "ZORAN • GlyphNet — release batchée (flat, ≤100 fichiers/dossier)"
authors = [{name = "Frédéric Tabary"}]
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
