[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoran-mimetic"
version = "1.0.0a1"
description = "Zoran — Injecteurs GlyphNet & Architecture Polymorphique"
authors = [
  { name="Institut IA Zoran", email="tabary01@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "cryptography>=41.0"
]

[project.urls]
Homepage = "https://github.com/Zoran-IA-Mimetique"
Documentation = "https://zenodo.org/communities/zoran"
